--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,3 +3,15 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+#user-form, #race-character-promp {
+  display: none;
+}
+
+
+.container {
+  margin: 20px auto;
+  width: 600px;
+  padding: 0px 20px 20px 20px;
+  border: 1px dotted black;
+}
