--- a/app/views/page.erb
+++ b/app/views/page.erb
@@ -8,16 +8,19 @@
         <input type="text" name="user[username]" placeholder="username">
         <input type="text" name="user[password]" placeholder="password">
         <input type="hidden" name="user[race_character]">
-        <input type="submit" value="Race">
+        <input type="submit" value="Add">
     </form>
     <p id="race-character-promp">
       The next key you hit will be your "race" key.
     </p>
 
+  </div>
+
     <div id="sgined-in-user-box">
+        <a id='start-race' href=''>Race</a>
     </div>
 
-  </div>
+  
 
 </div>
 
