Added forms changed routes to default for testing

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,8 @@
       <%= f.label :password, placeholder: "Name" %>
       <%= f.password_field :password %>
     </div>
+     
+    <%= f.submit "Register"%>
   	<% end %>
   <div class = "errors">
     <% if @user %>
