--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.floor-plan {
+  width: 625px;
+  height: 625px;
+  border: solid 1px gray;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+.tables {
+  width: 150px;
+  width: 150px;
+  border: solid 1px gray;
+  display: inline-block;
+}
