--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class = "all-forms">
 <h4>Please Sign Up </h4>
 <br>
-  <%= form_for :user, url: users_path do |f| %>
+  <%= form_for (@user) do |f| %>
     <div class = "input-field">
       <%= f.label :first_name %>
       <%= f.text_field :first_name %>
