Add D3 commands directly to view page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,3 @@
-<script src="http://d3js.org/d3.v3.min.js"></script>
-
 <h1><%= @event.name %></h1>
 <div class="floor-plan">
   <% num_of_tables = 10 %>
@@ -11,3 +9,16 @@
   <% end %>
 </div>
 
+<script>
+  var svg = d3.select('#table-1');
+  var originX = 75;
+  var originY = 75;
+  var tableRadius = 40;
+
+  var table = svg.append("circle").attr({
+    cx: originX,
+    cy: originY,
+    r: tableRadius,
+    fill: "#595AB7"
+  });
+</script>
