Add login and signup links to welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Maitre-DBC</h1>
-<p>Hello, world!</p>
+<p>Get started: <%= link_to 'Login', login_path %></p>
+<p> New User? <%= link_to 'Sign up now', signup_path %></p>
 <p>This will be a place where we can ask people to sign up or log in. We can also explain what the app does and why you want to use it.</p>
