--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,23 +13,10 @@
 </div>
 
 <script>
-  // var svg = d3.select('#table-1');
-  // var originX = 75;
-  // var originY = 75;
-  // var tableRadius = 40;
+// var test = d3.select("h1")
+  // .style("background-color", "blue")
 
-  // var table = svg.append("circle").attr({
-  //   cx: originX,
-  //   cy: originY,
-  //   r: tableRadius,
-  //   fill: "#595AB7"
-  // });
-
-var test = d3.select("h1")
-  .style("background-color", "blue")
-
-
-var svg = d3.select('.tables').append("svg:g")
+var svg = d3.selectAll('.tables').append('svg')
   .attr("width", 150)
   .attr("height", 150);
 
@@ -37,25 +24,27 @@ var originX = 75;
 var originY = 75;
 var tableRadius = 40;
 
-var table = svg.append("svg:circle")
-  .attr("cx", originX)
-  .attr("cy", originY)
-  .attr("r", tableRadius)
-  .style("fill", "#595AB7");
+var table = svg.append("circle").attr({
+  cx: originX,
+  cy: originY,
+  r: tableRadius,
+  fill: "#595AB7"
+});
+
 </script>
 
 
 
-    <title>D3 Graphic</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700|Exo:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="_/base.css">
-    <link rel="stylesheet" href="style.css">
+<title>D3 Graphic</title>
+<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700|Exo:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="_/base.css">
+<link rel="stylesheet" href="style.css">
 
 
-        <h2>D3 Graphic</h2>
-        <div id="chart"></div>
-    </div>
-   <script>var bardata = [];
+    <h2>D3 Graphic</h2>
+    <div id="chart"></div>
+</div>
+<script>var bardata = [];
 
 for (var i=0; i < 30; i++) {
     bardata.push(Math.round(Math.random()*30)+20)
@@ -154,8 +143,6 @@ myChart.transition()
             <use xlink:href="#triangle"
                 x="30" y="0" />
         </svg>
-
-show page
 Logout
 <li><%= link_to 'Logout', logout_path(current_user), :method => :delete %></li>
 </div>
