--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,27 +7,60 @@
   <% seats_per_table = 10 %>
   <% counter = 1 %>
   <% num_of_tables.times do %>
-     <div class="tables" id="table-<%= counter %>"></div>
+    <svg class="event-table" id="table-<%= counter %>"></div>
     <% counter += 1 %>
   <% end %>
 
-<script>var test = d3.select("h1")
+<script>
+var test = d3.select("h1")
   .style("background-color", "blue")
 
+var originX = 200;
+var originY = 200;
+var innerCircleRadius = 40;
+var outerCircleRadius = 60;
 
-var svg = d3.select('.tables').append("svg:g")
-  .attr("width", 150)
-  .attr("height", 150);
+var table = svg.append(".event-table").attr({
+    cx: originX,
+    cy: originY,
+    r: 40,
+    fill: "white",
+    stroke: "black"
+});
 
-var originX = 75;
-var originY = 75;
-var tableRadius = 40;
+var group = svg.append("g");
 
-var table = svg.append("svg:circle")
-  .attr("cx", originX)
-  .attr("cy", originY)
-  .attr("r", tableRadius)
-  .style("fill", "#595AB7");
+var outerCircle = svg.append("circle").attr({
+    cx: originX,
+    cy: originY,
+    opacity: 0,
+    r: outerCircleRadius,
+    fill: "none",
+    stroke: "black"
+});
+
+var chairOriginX = originX + ((60) * Math.sin(0));
+var chairOriginY = originY - ((60) * Math.cos(0));
+
+var pointOnOuterCircle = svg.append("circle").attr({
+    cx: chairOriginX,
+    cy: chairOriginY,
+    opacity: 0,
+    r: 5,
+    fill: "black"
+});
+
+var chairWidth = 20;
+var chair = svg.append("rect").attr({
+    x: chairOriginX - (chairWidth / 2),
+    y: chairOriginY - (chairWidth / 2),
+    width: chairWidth,
+    opacity: 0,
+    height: 20,
+    fill: "none",
+    stroke: "blue"
+});
+
 </script>
 
 
