--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 
-   
+   <%= current_user.username %>
     <title>D3 Graphic</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700|Exo:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="_/base.css">
