--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,6 +3,7 @@
 
 <%= link_to 'Logout', logout_path(current_user), :method => :delete %>
 <p>Event Host: <strong><%= @user.username %></strong></p>
+<%= link_to 'Add Guest', new_guest_path %>
 
 <h1><%= @event.name %></h1>
 <div class="floor-plan">
