--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,8 +6,8 @@
 
 <h1><%= @event.name %></h1>
 <div class="floor-plan">
-  <% num_of_tables = 6 %>
-  <% seats_per_table = 7 %>
+  <% num_of_tables = @num_of_tables %>
+  <% seats_per_table = @number_of_seats %>
   <% counter = 1 %>
   <% num_of_tables.times do %>
      <div class="tables" id="table-<%= counter %>"></div>
@@ -19,43 +19,34 @@
 // var test = d3.select("h1")
   // .style("background-color", "blue")
 
+var numOfTables = <%= num_of_tables %>
 var seatsPerTable = <%= seats_per_table %>;
 // console.log(seatsPerTable);
 var rotationFactor = Math.floor(360 / seatsPerTable);
 
-var svg = d3.selectAll('.tables').append('svg')
-  .attr("width", 150)
-  .attr("height", 150);
-var originX = 75;
-var originY = 75;
-var tableRadius = 40;
-var chairsRadius = 55;
-var chairWidth = 15;
+for (var tableCounter = 1; tableCounter <= numOfTables; tableCounter++) {
+    var svg = d3.select('#table-' + tableCounter).append('svg')
+      .attr("width", 150)
+      .attr("height", 150);
+    var group = svg.append('g');
 
-var table = svg.append("circle").attr({
-  cx: originX,
-  cy: originY,
-  r: tableRadius,
-  fill: "#595AB7"
-});
+    var originX = 75;
+    var originY = 75;
+    var tableRadius = 40;
+    var chairsRadius = 55;
+    var chairWidth = 15;
 
-var chairOriginX = originX + (chairsRadius * Math.sin(0));
-var chairOriginY = originY - (chairsRadius * Math.cos(0));
+    var table = group.append("circle").attr({
+      cx: originX,
+      cy: originY,
+      r: tableRadius,
+      fill: "#595AB7"
+    });
 
-svg.append("rect").attr({
-    x: chairOriginX - (chairWidth / 2),
-    y: chairOriginY - (chairWidth / 2),
-    width: chairWidth,
-    opacity: 1,
-    height: chairWidth,
-    fill: "none",
-    stroke: "#C61C6F"
-});
+    var chairOriginX = originX + (chairsRadius * Math.sin(0));
+    var chairOriginY = originY - (chairsRadius * Math.cos(0));
 
-var rotation = 0;
-
-for (i = 1; i < seatsPerTable; i++) {
-    var currentChair = svg.append("rect").attr({
+    group.append("rect").attr({
         x: chairOriginX - (chairWidth / 2),
         y: chairOriginY - (chairWidth / 2),
         width: chairWidth,
@@ -65,9 +56,39 @@ for (i = 1; i < seatsPerTable; i++) {
         stroke: "#C61C6F"
     });
 
-    rotation += rotationFactor;
-    currentChair.attr("transform", "rotate(" + rotation + ", " + originX + ", " + originY + ")");
+    var seatCounter = 1;
+
+    group.append("text").attr({
+        x: chairOriginX - (chairWidth / 2),
+        y: chairOriginY - (chairWidth / 2),
+        width: chairWidth * 2,
+        opacity: 1,
+        height: chairWidth * 2,
+        fill: "none",
+        id: "table-" + tableCounter + "seat-" + seatCounter
+    }).text(function(tableCounter, seatCounter) {
+        return "test";
+    });
+
+    var rotation = 0;
+
+    for (var i = 1; i < seatsPerTable; i++) {
+        var currentChair = group.append("rect").attr({
+            x: chairOriginX - (chairWidth / 2),
+            y: chairOriginY - (chairWidth / 2),
+            width: chairWidth,
+            opacity: 1,
+            height: chairWidth,
+            fill: "none",
+            stroke: "#C61C6F"
+        });
+
+        rotation += rotationFactor;
+        currentChair.attr("transform", "rotate(" + rotation + ", " + originX + ", " + originY + ")");
+    }
 }
 
 </script>
+
+<div><%= @tables[0].guests[0].first_name %> <%= @tables[0].guests[0].last_name %></div>
 
