--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,4 @@
 
-<<<<<<< HEAD
-   <%= current_user.username %>
-=======
-
->>>>>>> c3494b6ec164be9acd9c6735d4b8fea0411191d8
     <title>D3 Graphic</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700|Exo:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="_/base.css">
@@ -13,88 +8,12 @@
         <h2>D3 Graphic</h2>
         <div id="chart"></div>
     </div>
-   <script>var bardata = [];
+    <script>
+    bardata = <%= 30.times.map { (20..50).to_a.sample }.to_json %>;
+    </script>
 
-for (var i=0; i < 30; i++) {
-    bardata.push(Math.round(Math.random()*30)+20)
-}
+    <%= javascript_include_tag "our-first-d3-chart" %>
 
-var height = 400,
-    width = 600,
-    barWidth = 50,
-    barOffset = 5;
-
-var tempColor;
-
-var colors = d3.scale.linear()
-.domain([0, bardata.length*.33, bardata.length*.66, bardata.length])
-.range(['#B58929','#C61C6F', '#268BD2', '#85992C'])
-
-var yScale = d3.scale.linear()
-        .domain([0, d3.max(bardata)])
-        .range([0, height]);
-
-var xScale = d3.scale.ordinal()
-        .domain(d3.range(0, bardata.length))
-        .rangeBands([0, width])
-
-var tooltip = d3.select('body').append('div')
-        .style('position', 'absolute')
-        .style('padding', '0 10px')
-        .style('background', 'white')
-        .style('opacity', 0)
-
-var myChart = d3.select('#chart').append('svg')
-    .attr('width', width)
-    .attr('height', height)
-    .selectAll('rect').data(bardata)
-    .enter().append('rect')
-        .style('fill', function(d,i) {
-            return colors(i);
-        })
-        .attr('width', xScale.rangeBand())
-        .attr('x', function(d,i) {
-            return xScale(i);
-        })
-        .attr('height', 0)
-        .attr('y', height)
-
-    .on('mouseover', function(d) {
-
-        tooltip.transition()
-            .style('opacity', .9)
-
-        tooltip.html(d)
-            .style('left', (d3.event.pageX - 35) + 'px')
-            .style('top',  (d3.event.pageY - 30) + 'px')
-
-
-        tempColor = this.style.fill;
-        d3.select(this)
-            .style('opacity', .5)
-            .style('fill', 'yellow')
-    })
-
-    .on('mouseout', function(d) {
-        d3.select(this)
-            .style('opacity', 1)
-            .style('fill', tempColor)
-    })
-
-myChart.transition()
-    .attr('height', function(d) {
-        return yScale(d);
-    })
-    .attr('y', function(d) {
-        return height - yScale(d);
-    })
-    .delay(function(d, i) {
-        return i * 20;
-    })
-    .duration(1000)
-    .ease('elastic')
-
-</script>
    <svg width="600" height="400"
             style="background: #93A1A1">
             <rect x="250" y="150" width="100"
