created error box partial, made user routes restful

--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,20 +1,18 @@
-<div class="all-forms">
-<h4>Please Login</h4>
-<br>
- <%= form_for :user, url: sessions_path do |f| %>
-    <div class = "input-field">
-      <%= f.label :username %>
-      <%= f.text_field :username %>
-    </div>
-    <div class = "input-field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  	</div>
- <%= f.submit "Login"%>
-<% end %>
-  <div class = "errors">
-  <% if @errors %>
-    <%= @errors %>
-  <% end %>
+<div class="container">
+  <div class="all-forms">
+    <h4>Please Login</h4>
+    <%#= render "shared/error_box", locals: {errors: @errors} %>
+    <br>
+    <%= form_for :user, url: sessions_path do |f| %>
+      <div class = "input-field">
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+      </div>
+      <div class = "input-field">
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+    	</div>
+      <%= f.submit "Login"%>
+    <% end %>
   </div>
 </div>
