--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,8 @@
-
-    <script>
-    bardata = <%= 30.times.map { (20..50).to_a.sample }.to_json %>;
-    </script>
-
-    <%= javascript_include_tag "our-first-d3-chart" %>
-
 <li><%= link_to 'Logout', logout_path(current_user), :method => :delete %></li>
 
 <div class="container">
+  <h1>Welcome, <%= @user.username %></h1>
+  <h3>My Events</h3>
     <% @events.each do |event| %>
         <ul id="event-list">
             <li><%= link_to("#{event.name}", event) %></li>
