--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Maitre-DBC</h1>
-<p>Get started: <%= link_to 'Login', login_path %></p>
-<p> New User? <%= link_to 'Sign up now', new_users_path %></p>
-<p>This will be a place where we can ask people to sign up or log in. We can also explain what the app does and why you want to use it.</p>
+<div class="logo">LOGO</div>
+<div class="welcome-sign">
+  <div id="welcome-text">Please Wait to Be Seated...</div>
+  <div class="button" id="login"><%= link_to 'Login', login_path %></div>
+  <div class="button" id="signup"><%= link_to 'Sign up now', new_users_path %></div>
+  <div class="form"></div>
+</div>
