Add CSS for nav bar, logo, and buttons

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <nav class="events-index-nav">
-  <div class="logo">LOGO</div>
+  <div class="logo"><img src="../../assets/images/logo.png"></div>
   <div class="button" id="new-event"><%= link_to 'Create a New Event', new_event_path %></div>
   <div class="button" id="logout"><%= link_to 'Logout', logout_path(current_user), :method => :delete %></div>
 </nav>
