--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -2,6 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.events-index-nav {
+  width: 100%;
+  height: 100px;
+  background-color: #520029;
+}
+
+.logo {
+  display: inline-block;
+}
+
+.button {
+  display: inline-block;
+}
+
 .floor-plan {
   width: 625px;
   height: 625px;
