Change welcome message

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="logo">LOGO</div>
 <div class="welcome-sign">
-  <div id="welcome-text">Please Wait to Be Seated...<br><br></div>
+  <div id="welcome-text">Please Follow Me to Be Seated...<br><br></div>
   <div class="button-container">
     <div class="button" id="login"><%= link_to 'Login', login_path %></div>
     <div class="button" id="signup"><%= link_to 'Sign Up', new_users_path %></div>
