--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div class="logo">LOGO</div>
+<div class="logo"><%= image_tag "logo.png" %></div>
 <div class="welcome-sign">
   <div id="welcome-text">Please Follow Me to Be Seated...<br><br></div>
   <div class="button-container">
