--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -48,6 +48,22 @@ h1, p {
 	border: solid 1px gray;
 }
 
+.event-show-side-bar {
+  background-color: #520029;
+  padding: 10px;
+  height: 100%;
+  position: absolute;
+}
+
+.event-show-side-bar a {
+  color: #E6E6E6;
+  text-decoration: none;
+}
+
+.event-show-side-bar a:hover {
+  color: #FFE5B0;
+}
+
 .event-show-container{
 	float: right;
 	margin-left: 75px;
