create and begin formatting a guests index page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 	<%= render partial: "shared/event_show_side_bar" %>
 	<div class='events-show-container'>
 		<div class='events-show-header'>
-			<h1><%= @event.name %></h1>
+			<h1 class="event-name"><%= @event.name %></h1>
 			<p>Event Host: <strong><%= @user.username %></strong></p>
 		</div>
 		<div class="events-show-floor-plan">
