--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -54,4 +54,8 @@ h1, p {
 	display: inline-block;
 }
 
-
+.event-name {
+  font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
+    color: black;
+    text-shadow: 4px 4px 3px rgba(0,0,0,0.1);
+}
