--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -36,6 +36,12 @@ h1, p {
 
 .side-bar-link {
 	display: block;
+  color: #E6E6E6;
+  text-decoration: none;
+}
+
+.side-bar-link:hover {
+  color: #FFE5B0;
 }
 
 .event-show-side-bar{
@@ -53,15 +59,6 @@ h1, p {
   padding: 10px;
   height: 100%;
   position: absolute;
-}
-
-.event-show-side-bar a {
-  color: #E6E6E6;
-  text-decoration: none;
-}
-
-.event-show-side-bar a:hover {
-  color: #FFE5B0;
 }
 
 .event-show-container{
