--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -111,4 +111,15 @@ p {
   font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
     color: black;
     text-shadow: 4px 4px 3px rgba(0,0,0,0.1);
+    margin: 50px 0 25px;
+}
+
+
+.event-host {
+  text-align: center;
+  font-size: 50px;
+}
+
+.bold {
+  font-weight: bold;
 }
