Add rack session access gem and complete test for creating event

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,7 @@
 <div class='events-page-container'>
-  <%= render partial: "shared/event_show_side_bar" %>
+  <% if current_event %>
+    <%= render partial: "shared/event_show_side_bar" %>
+  <% end %>
   <div class='events-show-container'>
     <%= render partial: "event_form", locals: {event: Event.new} %>
   </div>
