--- a/app/views/events/_event_form.html.erb
+++ b/app/views/events/_event_form.html.erb
@@ -1,13 +1,13 @@
-<div class="all-forms">
-  <br>
+<div class="all-forms" id="event-form">
   <h4>Create Event</h4>
+  <%= render partial: "shared/error_box", locals: {errors: @errors} %>
   <br>
   <%= form_for event do |f| %>
     <div class="input-field">
       <%= f.label :name %><br>
       <%= f.text_field :name%>
     </div>
-  
+
    <div class="input-field">
         <%= f.label "number of tables" %><br>
         <%= f.fields_for :table do |tf| %>
@@ -15,15 +15,20 @@
         <% end %>
     </div>
     <div class="input-field">
-      <%= f.label "number of seats" %><br>
+      <%= f.label "seats per table" %><br>
         <%= f.fields_for :table do |tf| %>
         <%=tf.text_field :number_of_seats %>
         <% end %>
     </div>
 
-   <div class="input-field">
-        <%= f.label :zip_code %><br>
-        <%= f.text_field :zip_code%>
+      <div class="input-field">
+      <%= f.label :address_line_one %><br>
+      <%= f.text_field :address_line_one%>
+    </div>
+
+    <div class="input-field">
+      <%= f.label :address_line_two %><br>
+      <%= f.text_field :address_line_two%>
     </div>
 
     <div class="input-field">
@@ -31,15 +36,10 @@
       <%= f.text_field :state%>
     </div>
 
-      <div class="input-field">
-      <%= f.label :address_line_one %><br>
-      <%= f.text_field :address_line_one%>
-    </div>
- 
     <div class="input-field">
-      <%= f.label :address_line_two %><br>
-      <%= f.text_field :address_line_two%>
-    </div> 
+        <%= f.label :zip_code %><br>
+        <%= f.text_field :zip_code%>
+    </div>
 
     <div class="input-field">
       <%= f.label :begins_at %><br>
@@ -47,8 +47,8 @@
     </div>
 
     <div class="input-field">
-      <%= f.label :end_at %><br>
-      <%= f.datetime_select :begins_at, :ampm => true, :start_year => 2015, :order => [:month, :day, :year] %>
+      <%= f.label :ends_at %><br>
+      <%= f.datetime_select :ends_at, :ampm => true, :start_year => 2015, :order => [:month, :day, :year] %>
     </div>
 
     <div class="actions">
