--- a/app/assets/stylesheets/guests.css
+++ b/app/assets/stylesheets/guests.css
@@ -11,10 +11,15 @@
 .guest-view-container {
   text-align: center;
   font-size: 35px;
-  font-family: Zapf Chancery, cursive;
 }
 
 #delete a {
+  text-decoration: none;
+  font-size: 16px;
+  color: #520029;
+}
+
+#edit a {
   text-decoration: none;
   font-size: 16px;
   color: #520029;
