--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,15 +1,12 @@
 <div class='events-page-container'>
   <%= render partial: "shared/event_show_side_bar" %>
   <div class='events-show-container'>
-    <div class="events-show-header">
-      <h1 class="event-name"><%= @event.name %></h1>
-      <div class="event-host">Event Host: <span class="bold"><%= current_user.full_name %></span></div>
-    </div>
+    <%= render partial: "shared/event_show_header", locals: {event: @event, user: current_user} %>
     <div class="new-guest-container">
       <h3>Add a guest here:</h3>
       <p class="warning">Will our illustrious host be attending the event? If so, be sure to add yourself to the guest list.</p>
       <br>
-      <%= render partial: "guests/new" %>
+      <%= render partial: "guests/new", locals: {guest: @guest} %>
     </div>
     
     <div class="all-guests-container">
