Correct link colors and separate table creation

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -61,11 +61,11 @@ h3 {
 
 #event-list a {
   text-decoration: none;
-  color: linen;
+  color: #7A2952;
 }
 
 #event-list a:hover {
-  color: #58002C;
+  color: #4C1A33;
 }
 
 p {
@@ -81,7 +81,7 @@ p {
 
 .side-bar-link {
 	display: block;
-  color: #E6E6E6;
+  color: linen;
   text-decoration: none;
 }
 
