--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
       <% @events.each do |event| %>
   			<tr>
           <td><%= link_to("#{event.name}", event) %></td>
-          <td><%= link_to 'Delete Event', event_path(event), method: :delete, confirm: 'Are you quite sure you wish to delete this event?' %></td>
+          <td><%= link_to 'Delete Event', event_path(event), method: :delete, data: {confirm: 'Are you quite sure you wish to delete this event?'} %></td>
         </tr>
   	  <% end %>
     </table>
