--- a/app/views/pairings/_pairing_form.html.erb
+++ b/app/views/pairings/_pairing_form.html.erb
@@ -1,12 +1,20 @@
-<%= form_for :pairing, url: pairings_path do |f| %>
-	<div class='input-field'>
-		<%= f.label :"whom" %>
-		<%= f.collection_select(:pairing, :guest_id, guests, :id, :full_name) %>
-	</div>
-	<div class='input-field'>
-		<%= f.label :"with whom" %>
-		<%= f.collection_select(:pairing, :pair_id, guests, :id, :full_name) %>
-	</div>
-	<%= f.hidden_field(:event_id, value: current_event.id) %>
-	<%= f.submit "Confirm" %>
-<% end %>
+<div class='all-forms' id='pairing-form'>
+	<h4>Add Requirement</h4>
+	<%= render partial: "shared/error_box", locals: {errors: errors} %>
+	<br>
+	<form method='post' action='/pairings'>
+		<input name="authenticity_token" type="hidden" value="token_value">
+		<label>who</label>
+		<select name='guest_list[guest]'>
+			<% guest_list.each do |guest| %>
+				<option value=<%= guest.id%>><%= guest.full_name %></option>
+			<% end %>
+		</select>
+		<label>with whom</label>
+		<select name='guest_list[pair]'>
+			<% guest_list.each do |guest| %>
+				<option value=<%= guest.id%>><%= guest.full_name %></option>
+			<% end %>
+		</select>
+	</form>
+</div>
