--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -42,6 +42,8 @@
   height: 625px;
   border: solid 1px gray;
   margin: 0 auto;
+  background-image: image-url("wood-floor.jpg");
+  z-index: 1;
 }
 
 h1 {
