--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -2,21 +2,36 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.events-index-nav {
-  overflow: auto;
-  width: 100%;
-  height: 106px;
-  background-color: #520029;
-}
+
+// General
 
 .logo {
   display: inline-block;
   margin: 10px;
 }
 
-#side-nav-logo {
-  width: 200px;
-  margin: -5px;
+h1 {
+  text-align: center;
+  font: 400 100px/0.8 'Great Vibes', Helvetica, sans-serif;
+    color: black;
+    text-shadow: 4px 4px 3px rgba(0,0,0,0.35);
+}
+
+h3 {
+  font-size: 30px;
+}
+
+p {
+  text-align: center;
+}
+
+// Events Index
+
+.events-index-nav {
+  overflow: auto;
+  width: 100%;
+  height: 106px;
+  background-color: #520029;
 }
 
 .events-index-nav .button {
@@ -33,32 +48,12 @@
   margin: 0 auto;
 }
 
-#event-list td {
-  padding-right: 150px;
-}
-
-.events-show-floor-plan {
-  width: 825px;
-  height: 625px;
-  border: solid 1px gray;
-  margin: 0 auto;
-  background-image: image-url("wood-floor.jpg");
-  z-index: 1;
-}
-
-h1 {
-  text-align: center;
-  font: 400 100px/0.8 'Great Vibes', Helvetica, sans-serif;
-    color: black;
-    text-shadow: 4px 4px 3px rgba(0,0,0,0.35);
-}
-
-h3 {
-  font-size: 30px;
-}
-
 #event-list {
   font-size: 30px;
+}
+
+#event-list td {
+  padding-right: 150px;
 }
 
 #event-list a {
@@ -70,61 +65,71 @@ h3 {
   color: #4C1A33;
 }
 
-p {
-  text-align: center;
+// Event Show
+
+.event-page-container{
+  margin: -10px;
 }
 
-.event-table {
-  width: 150px;
-  height: 150px;
-  border: solid 1px gray;
-  display: inline-block;
+.event-show-side-bar {
+  float: left;
+  background-color: #520029;
+  padding: 10px;
+  width: 210px;
+  height: 100%;
+  position: absolute;
+}
+
+#side-bar-logo {
+  width: 200px;
+  margin: -5px 0px 0px -5px;
 }
 
 .side-bar-link {
-	display: block;
+  display: block;
   color: linen;
   text-decoration: none;
+  margin-left: 10px;
+  margin-bottom: .25em;
+  font-size: 18px;
 }
 
 .side-bar-link:hover {
   color: #FFE5B0;
 }
 
-.event-show-side-bar{
-	float: left;
-	width: 210px;
-}
-
-.event-page-container{
-	border: solid 1px gray;
-}
-
-.event-show-side-bar {
-  background-color: #520029;
-  padding: 10px;
-  height: 100%;
-  position: absolute;
-}
-
 .event-show-container{
-	margin-left: 210px;
-	display: inline-block;
+  margin: 0px 0px 0px 500px;
+  display: inline-block;
 }
 
-.event-name {
+#event-name {
   font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
     color: black;
     text-shadow: 4px 4px 3px rgba(0,0,0,0.35);
-    margin: 50px 0 25px;
+    margin: 100px 0px 25px 0px;
 }
 
-
-.event-host {
+#event-host {
   text-align: center;
-  font-size: 50px;
+  font-size: 30px;
 }
 
 .bold {
   font-weight: bold;
+}
+
+.event-show-floor-plan {
+  width: 825px;
+  height: 625px;
+  border: solid 1px gray;
+  margin: 0 auto;
+  background-image: image-url("wood-floor.jpg");
+  z-index: 1;
+}
+
+.event-table {
+  width: 150px;
+  height: 150px;
+  display: inline-block;
 }
