--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,11 +1,11 @@
-<div class='events-page-container'>
+<div class='event-page-container'>
 	<%= render partial: "shared/event_show_side_bar" %>
-	<div class='events-show-container'>
-		<div class='events-show-header'>
-			<h1 class="event-name"><%= @event.name %></h1>
-			<p>Event Host: <strong><%= @user.username %></strong></p>
+	<div class='event-show-container'>
+		<div class='event-show-header'>
+			<h1 id="event-name"><%= @event.name %></h1>
+			<p id="event-host">Event Host: <strong><%= @user.username %></strong></p>
 		</div>
-		<div class="events-show-floor-plan">
+		<div class="event-show-floor-plan">
 		  <% seats_per_table = @number_of_seats %>
 		  <% counter = 1 %>
 		  <% @num_of_tables.times do %>
