fix bugs in the pairing index and related partial

--- a/app/views/pairings/_pairing_form.html.erb
+++ b/app/views/pairings/_pairing_form.html.erb
@@ -6,13 +6,13 @@
 		<input name="authenticity_token" type="hidden" value="token_value">
 		<label>who</label>
 		<select name='guest_list[guest]'>
-			<% guest_list.each do |guest| %>
+			<% guests.each do |guest| %>
 				<option value=<%= guest.id%>><%= guest.full_name %></option>
 			<% end %>
 		</select>
 		<label>with whom</label>
 		<select name='guest_list[pair]'>
-			<% guest_list.each do |guest| %>
+			<% guests.each do |guest| %>
 				<option value=<%= guest.id%>><%= guest.full_name %></option>
 			<% end %>
 		</select>
