--- a/app/views/pairings/index.html.erb
+++ b/app/views/pairings/index.html.erb
@@ -5,15 +5,15 @@
 		<div class='new-pairing-container'>
 			<h3>Please note who needs to be seated with whom</h3>
 			<br>
-			<%= render partial: "pairing_form", locals: {guests: @guests} %> 
+			<%= render partial: "pairing_form", locals: {guests: @guests, errors: @errors} %> 
 		</div>
 
 		<div class='all-pairing-container'>
 			<div id='left-column'>
-				<%= render partial: "pairings", locals: {pairings: @pairings[0...(@pairings/2)]} %>
+				<%= render partial: "pairings", locals: {pairings: @pairings[0...(@pairings.length / 2)]} %>
 			</div>
 			<div id='right-column'>
-				<%= render partial: "pairings", locals: {pairings: @pairings[(@guests.length / 2)..-1]} %>
+				<%= render partial: "pairings", locals: {pairings: @pairings[(@pairings.length / 2)..-1]} %>
 			</div>
 		</div>
 
