Extend navbar to always be full screen

--- a/app/views/guests/_new.html.erb
+++ b/app/views/guests/_new.html.erb
@@ -8,5 +8,5 @@
     <%= f.text_field :last_name %>
   </div>
   <%= f.hidden_field(:event_id, value: current_event.id) %>
-  <%= f.submit "Add" %>
+  <%= f.submit "Confirm" %>
 <% end %>
