--- a/app/views/shared/_error_box.html.erb
+++ b/app/views/shared/_error_box.html.erb
@@ -1,7 +1,7 @@
 <% if errors %>
 	<div class='errors'>
 		<% errors.each do |error| %>
-			<p><%= error %></p>
+			<h4><%= error %></h4>
 		<% end %>
 	</div>
 <% end %>
