Add ajax for welcome page

--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -13,5 +13,5 @@
     </div>
     <%= f.submit "Login"%>
   <% end %>
-  <p> New User? <%= link_to("Sign up now", new_users_path ) %></p>
+  <p> New User? <%= link_to("Sign up now", new_users_path, id: "link-to-signup" ) %></p>
 </div>
