--- a/app/views/shared/_signup_form.html.erb
+++ b/app/views/shared/_signup_form.html.erb
@@ -2,7 +2,7 @@
   <h4>Please Sign Up </h4>
   <%= render partial: "shared/error_box", locals: {errors: errors} %>
   <br>
-  <%= form_for (current_user) do |f| %>
+  <%= form_for :user do |f| %>
     <div class = "input-field">
       <%= f.label :first_name %>
       <%= f.text_field :first_name %>
@@ -26,4 +26,5 @@
 
     <%= f.submit "Register"%>
   <% end %>
+  <p>Already have an account? <%= link_to 'Login here', login_path, id: "link-to-login" %>.</p>
 </div>
