--- a/app/views/guests/_new.html.erb
+++ b/app/views/guests/_new.html.erb
@@ -1,12 +1,3 @@
-<%= form_for :guest, url: guests_path do |f| %>
-  <div class="input-field">
-    <%= f.label :"first name" %>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="input-field">
-    <%= f.label :"last name" %>
-    <%= f.text_field :last_name %>
-  </div>
-  <%= f.hidden_field(:event_id, value: current_event.id) %>
-  <%= f.submit "Add" %>
+<%= form_for :guest,  url: guests_path do |f| %>
+	<%= render partial: "guests/form_fields", locals: {f: f} %>
 <% end %>
