--- a/app/views/shared/_signup_form.html.erb
+++ b/app/views/shared/_signup_form.html.erb
@@ -1,30 +1,32 @@
-<div class = "all-forms" id='signup-form'>
-  <h4>Please Sign Up </h4>
-  <%= render partial: "shared/error_box", locals: {errors: errors} %>
-  <br>
-  <%= form_for :user do |f| %>
-    <div class = "input-field">
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name %>
-    </div>
-    <div class = "input-field">
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name %>
-    </div>
-    <div class = "input-field">
-      <%=f.label :email, placeholder: "Email" %>
-      <%= f.text_field :email %>
-    </div>
-    <div class = "input-field">
-      <%= f.label :username %>
-      <%= f.text_field :username %>
-    </div>
-    <div class = "input-field">
-      <%= f.label :password, placeholder: "Name" %>
-      <%= f.password_field :password %>
-    </div>
+<div class="container">
+  <div class = "all-forms" id='signup-form'>
+    <h4>Please Sign Up </h4>
+    <%= render partial: "shared/error_box", locals: {errors: errors} %>
+    <br>
+    <%= form_for :user, url: users_path do |f| %>
+      <div class = "input-field">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name %>
+      </div>
+      <div class = "input-field">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
+      </div>
+      <div class = "input-field">
+        <%=f.label :email, placeholder: "Email" %>
+        <%= f.text_field :email %>
+      </div>
+      <div class = "input-field">
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+      </div>
+      <div class = "input-field">
+        <%= f.label :password, placeholder: "Name" %>
+        <%= f.password_field :password %>
+      </div>
 
-    <%= f.submit "Register"%>
-  <% end %>
-  <p>Already have an account? <%= link_to 'Login here', login_path, id: "link-to-login" %>.</p>
+      <%= f.submit "Register"%>
+    <% end %>
+    <p>Already have an account? <%= link_to 'Login here', login_path, id: "link-to-login" %>.</p>
+  </div>
 </div>
