--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
   <div id="welcome-text">Please Follow Me to Be Seated...<br><br></div>
   <div class="button-container">
     <div class="button" id="login"><%= link_to 'Login', login_path %></div>
-    <div class="button" id="signup"><%= link_to 'Sign Up', new_users_path %></div>
+    <div class="button" id="signup"><%= link_to 'Sign Up', new_user_path %></div>
   </div>
   <div class="form"></div>
 </div>
