--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -14,6 +14,6 @@
       </div>
       <%= f.submit "Login"%>
     <% end %>
-    <p> New User? <%= link_to("Sign up now", new_users_path, id: "link-to-signup" ) %></p>
+    <p> New User? <%= link_to("Sign up now", new_user_path, id: "link-to-signup" ) %></p>
   </div>
 </div>
