--- a/app/views/pairings/_pairing_form.html.erb
+++ b/app/views/pairings/_pairing_form.html.erb
@@ -5,16 +5,17 @@
 	<form method='post' action='/pairings'>
 		<input name="authenticity_token" type="hidden" value="token_value">
 		<label>who</label>
-		<select name='guest_list[guest]'>
+		<select name='pairing[guest_id]'>
 			<% guests.each do |guest| %>
 				<option value=<%= guest.id%>><%= guest.full_name %></option>
 			<% end %>
 		</select>
 		<label>with whom</label>
-		<select name='guest_list[pair]'>
+		<select name='pairing[pair_id]'>
 			<% guests.each do |guest| %>
 				<option value=<%= guest.id%>><%= guest.full_name %></option>
 			<% end %>
 		</select>
+		<input type="submit" value="Add Requirement">
 	</form>
 </div>
