added event create

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,6 @@
 <div class='events-page-container'>
 	<%= render partial: "shared/event_show_side_bar" %>
 	<div class='events-show-container'>
-		<%= render partial: "event_form", locals: {event: current_event} %>
+		<%= render partial: "edit_event_form", locals: {event: current_event, errors: @errors} %>
 	</div>
 </div>
