--- a/app/views/events/_new_event_form.html.erb
+++ b/app/views/events/_new_event_form.html.erb
@@ -1,8 +1,8 @@
 <div class="all-forms" id="event-form">
   <h4>Create Event</h4>
-  <%= render partial: "shared/error_box", locals: {errors: @errors} %>
+  <%= render partial: "shared/error_box", locals: {errors: errors} %>
   <br>
-  <%= form_for event do |f| %>
+  <%= form_for :event, url: events_path do |f| %>
     <div class="input-field">
       <%= f.label :name %>
       <%= f.text_field :name%><br>
