--- a/app/views/pairings/_pairing_form.html.erb
+++ b/app/views/pairings/_pairing_form.html.erb
@@ -6,12 +6,14 @@
 		<input name="authenticity_token" type="hidden" value="token_value">
 		<label>who</label>
 		<select name='guest_list[guest]'>
+				<option></option>
 			<% guests.each do |guest| %>
 				<option value=<%= guest.id%>><%= guest.full_name %></option>
 			<% end %>
 		</select>
 		<label>with whom</label>
 		<select name='guest_list[pair]'>
+				<option></option>
 			<% guests.each do |guest| %>
 				<option value=<%= guest.id%>><%= guest.full_name %></option>
 			<% end %>
