two small tweaks

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <nav class="events-index-nav">
   <div class="logo"><%= image_tag "logo.png" %></div>
   <div class="button" id="logout"><%= link_to 'Logout', logout_path(current_user), :method => :delete %></div>
-  <div class="button" id="new-event"><%= link_to 'Create a New Event', new_event_path %></div>
+  <div class="button" id="new-event"><%= link_to 'Create Event', new_event_path %></div>
 </nav>
 <div class="event-index-container">
   <h1>Welcome, <%= @user.username %></h1>
